metadata-sfdx/force-app/main/default/objects/DisputeMessages__c/DisputeMessages__c.object-meta.xml
<CustomObject>
    <description>Custom Object for Solution Center to capture 'Questions', 'Answers', from a Pro or Customer on an 'Offer' related to a 'Dispute'.  Also captures 'Success Tips' sent to a pro or customer from Thumbtack and file images.</description>
    <label>Dispute Message</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dispute Messages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>