metadata-sfdx/force-app/main/default/objects/DisputeMessages__c/fields/ContactCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>ContactCreatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact of the portal user who created the message record.</description>
    <inlineHelpText>The contact of the portal user who created the message record.</inlineHelpText>
    <label>Contact (Created By)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Dispute Messages (Created By)</relationshipLabel>
    <relationshipName>DisputeMessageCreatedBy</relationshipName>
    <type>Lookup</type>
</CustomField>