metadata-sfdx/force-app/main/default/objects/DisputeMessages__c/fields/ContactCreatedByFirstName__c.field-meta.xml
<CustomField>
    <fullName>ContactCreatedByFirstName__c</fullName>
    <description>Contact Created By First Name</description>
    <formula>ContactCreatedBy__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact (Created By) First Name</label>
    <type>Text</type>
</CustomField>