metadata-sfdx/force-app/main/default/objects/DisputeMessages__c/fields/ContactCreatedByLastName__c.field-meta.xml
<CustomField>
    <fullName>ContactCreatedByLastName__c</fullName>
    <description>Contact Created by Last Name</description>
    <formula>ContactCreatedBy__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact (Created By) Last Name</label>
    <type>Text</type>
</CustomField>