metadata-sfdx/force-app/main/default/objects/DisputeMessages__c/fields/ContactSharedWith__c.field-meta.xml
<CustomField>
    <fullName>ContactSharedWith__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact of the portal user who the message should be shared with.</description>
    <inlineHelpText>The contact of the portal user who the message should be shared with.</inlineHelpText>
    <label>Contact (Shared with)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Dispute Messages (Shared with)</relationshipLabel>
    <relationshipName>DisputeMessagesSharedWith</relationshipName>
    <type>Lookup</type>
</CustomField>