metadata-sfdx/force-app/main/default/objects/DisputeMessages__c/fields/ContactSharedWithFirstName__c.field-meta.xml
<CustomField>
    <fullName>ContactSharedWithFirstName__c</fullName>
    <description>Contact Shared With First Name</description>
    <formula>ContactSharedWith__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact (Shared With) First Name</label>
    <type>Text</type>
</CustomField>