metadata-sfdx/force-app/main/default/objects/DisputeMessages__c/fields/ContactSharedWithLastName__c.field-meta.xml
<CustomField>
    <fullName>ContactSharedWithLastName__c</fullName>
    <description>Contact Shared with Last Name</description>
    <formula>ContactSharedWith__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact (Shared With) Last Name</label>
    <type>Text</type>
</CustomField>