metadata-sfdx/force-app/main/default/objects/DisputeMessages__c/fields/DisputeMessage__c.field-meta.xml
<CustomField>
    <fullName>DisputeMessage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a hierarchical look up to the Dispute Message so that we can associate text messages to the corresponding file images.</description>
    <inlineHelpText>This is a hierarchical look up to the Dispute Message so that we can associate text messages to the corresponding file images.</inlineHelpText>
    <label>Dispute Message</label>
    <referenceTo>DisputeMessages__c</referenceTo>
    <relationshipLabel>Dispute Messages</relationshipLabel>
    <relationshipName>DisputeMessages</relationshipName>
    <type>Lookup</type>
</CustomField>