metadata-sfdx/force-app/main/default/objects/DisputeMessages__c/fields/DisputeOffer__c.field-meta.xml
<CustomField>
    <fullName>DisputeOffer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The dispute offer for which the message was initiated or replied from.</description>
    <inlineHelpText>The dispute offer for which the message was initiated or replied from.</inlineHelpText>
    <label>Dispute Offer</label>
    <referenceTo>DisputeOffer__c</referenceTo>
    <relationshipLabel>Dispute Messages</relationshipLabel>
    <relationshipName>DisputeMessages</relationshipName>
    <type>Lookup</type>
</CustomField>