metadata-sfdx/force-app/main/default/objects/DisputeMessages__c/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <description>The type of documentation uploaded as part of the file image (e.g., invoice, receipt, pic of damage).</description>
    <inlineHelpText>The type of documentation uploaded as part of the file image (e.g., invoice, receipt, pic of damage).</inlineHelpText>
    <label>Document Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>