metadata-sfdx/force-app/main/default/objects/DisputeMessages__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The body of the message.</description>
    <inlineHelpText>The body of the message.</inlineHelpText>
    <label>Message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>