metadata-sfdx/force-app/main/default/objects/DisputeMessages__c/recordTypes/Confidential.recordType-meta.xml
<RecordType>
    <fullName>Confidential</fullName>
    <active>true</active>
    <description>Record type used to manage highly sensitive dispute messages. Strict record sharing for this record type.</description>
    <label>Confidential</label>
</RecordType>