metadata-sfdx/force-app/main/default/objects/DisputeMessages__c/recordTypes/FileImage.recordType-meta.xml
<RecordType>
    <fullName>FileImage</fullName>
    <active>true</active>
    <description>Record type used to manage the images uploaded by a pro or customer during the dispute resolution process.</description>
    <label>File Image</label>
</RecordType>