metadata-sfdx/force-app/main/default/objects/DisputeMessages__c/recordTypes/SuccessTip.recordType-meta.xml
<RecordType>
    <fullName>SuccessTip</fullName>
    <active>true</active>
    <description>Record type used to manage the tips displayed in the solution center from Thumbtack.</description>
    <label>Success Tip</label>
</RecordType>